--- a/Week1/azure-pipeline.yml
+++ b/Week1/azure-pipeline.yml
@@ -9,5 +9,5 @@ steps:
   inputs:
     azureSubscription: 'CloudOps'
     scriptType: 'bash'
-    scriptLocation: 'scriptPath'
-    scriptPath: './devops-pipeline-script.sh'
+    scriptLocation: 'scripts'
+    scriptPath: 'devops-pipeline-script.sh'
