--- a/Week1/azure-pipeline.yml
+++ b/Week1/azure-pipeline.yml
@@ -9,5 +9,5 @@ steps:
   inputs:
     azureSubscription: 'CloudOps'
     scriptType: 'bash'
-    scriptLocation: 'inlineScript'
-    scriptPath: 'devops-pipeline-script.sh'
+    scriptLocation: 'scriptPath'
+    scriptPath: './scripts/devops-pipeline-script.sh'
